k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
  labels:
    app: express-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: nextjs
        image: quay.io/jm_carnicero/placeholder_image:placeholder_tag
        ports:
        - containerPort: 3000
